// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyncCalloutsPanel renders 1`] = `
<Fragment>
  <EuiFlexItem>
    <EuiCallOut
      color="success"
      iconType="check"
      title="Sync complete"
    >
      <MemoizedFormattedMessage
        defaultMessage="Completed at {date}"
        id="searchConnectors.syncJobs.flyout.completedDescription"
        values={
          Object {
            "date": <FormattedDateTime
              date={2022-09-05T15:59:39.816Z}
            />,
          }
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
      iconType="iInCircle"
      title="Sync started manually"
    >
      <MemoizedFormattedMessage
        defaultMessage="Started at {date}"
        id="searchConnectors.syncJobs.flyout.startedAtDescription"
        values={
          Object {
            "date": <FormattedDateTime
              date={2022-09-05T14:59:39.816Z}
            />,
          }
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
</Fragment>
`;

exports[`SyncCalloutsPanel renders canceled job 1`] = `
<Fragment>
  <EuiFlexItem>
    <EuiCallOut
      color="success"
      iconType="check"
      title="Sync complete"
    >
      <MemoizedFormattedMessage
        defaultMessage="Completed at {date}"
        id="searchConnectors.syncJobs.flyout.completedDescription"
        values={
          Object {
            "date": <FormattedDateTime
              date={2022-09-05T15:59:39.816Z}
            />,
          }
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="danger"
      iconType="cross"
      title="Sync canceled"
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
      iconType="iInCircle"
      title="Sync started manually"
    >
      <MemoizedFormattedMessage
        defaultMessage="Started at {date}"
        id="searchConnectors.syncJobs.flyout.startedAtDescription"
        values={
          Object {
            "date": <FormattedDateTime
              date={2022-09-05T14:59:39.816Z}
            />,
          }
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
</Fragment>
`;

exports[`SyncCalloutsPanel renders different trigger method 1`] = `
<Fragment>
  <EuiFlexItem>
    <EuiCallOut
      color="success"
      iconType="check"
      title="Sync complete"
    >
      <MemoizedFormattedMessage
        defaultMessage="Completed at {date}"
        id="searchConnectors.syncJobs.flyout.completedDescription"
        values={
          Object {
            "date": <FormattedDateTime
              date={2022-09-05T15:59:39.816Z}
            />,
          }
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="warning"
      iconType="clock"
      title="In progress"
    >
      Sync has been running for 1h 0m 0s.
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
      iconType="iInCircle"
      title="Sync started by schedule"
    >
      <MemoizedFormattedMessage
        defaultMessage="Started at {date}"
        id="searchConnectors.syncJobs.flyout.startedAtDescription"
        values={
          Object {
            "date": <FormattedDateTime
              date={2022-09-05T14:59:39.816Z}
            />,
          }
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
</Fragment>
`;

exports[`SyncCalloutsPanel renders error job 1`] = `
<Fragment>
  <EuiFlexItem>
    <EuiCallOut
      color="success"
      iconType="check"
      title="Sync complete"
    >
      <MemoizedFormattedMessage
        defaultMessage="Completed at {date}"
        id="searchConnectors.syncJobs.flyout.completedDescription"
        values={
          Object {
            "date": <FormattedDateTime
              date={2022-09-05T15:59:39.816Z}
            />,
          }
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="danger"
      iconType="cross"
      title="Sync failure"
    >
      Sync failure: .
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
      iconType="iInCircle"
      title="Sync started manually"
    >
      <MemoizedFormattedMessage
        defaultMessage="Started at {date}"
        id="searchConnectors.syncJobs.flyout.startedAtDescription"
        values={
          Object {
            "date": <FormattedDateTime
              date={2022-09-05T14:59:39.816Z}
            />,
          }
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
</Fragment>
`;

exports[`SyncCalloutsPanel renders in progress job 1`] = `
<Fragment>
  <EuiFlexItem>
    <EuiCallOut
      color="success"
      iconType="check"
      title="Sync complete"
    >
      <MemoizedFormattedMessage
        defaultMessage="Completed at {date}"
        id="searchConnectors.syncJobs.flyout.completedDescription"
        values={
          Object {
            "date": <FormattedDateTime
              date={2022-09-05T15:59:39.816Z}
            />,
          }
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="warning"
      iconType="clock"
      title="In progress"
    >
      Sync has been running for 1h 0m 0s.
    </EuiCallOut>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
      iconType="iInCircle"
      title="Sync started manually"
    >
      <MemoizedFormattedMessage
        defaultMessage="Started at {date}"
        id="searchConnectors.syncJobs.flyout.startedAtDescription"
        values={
          Object {
            "date": <FormattedDateTime
              date={2022-09-05T14:59:39.816Z}
            />,
          }
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
</Fragment>
`;
